--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                             <div>
                                 <span class="projects__subtitle">RS232 Scale</span>
                                 <h3 class="projects__title">Weight Scale</h3>
-                                <a href="#" class="projects__button button button__small">
+                                <a href="https://github.com/watthanai/watthanai.github.io/blob/main/Document/Brochure-WeightScaleDev01.pdf" class="projects__button button button__small">
                                     <i class="ri-link"></i>
                                 </a>
                             </div>
