--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
             <div class="profile__buttons">
                 <!-- Insert your CV -->
-                <a download="" href="assets/pdf/CV_Watthanai - L.pdf" class="button">
+                <a download="assets/pdf/CV_Watthanai - L.pdf" href="" class="button">
                     Download CV <i class="ri-download-line"></i>
                 </a>
             </div>
@@ -205,7 +205,7 @@
                             <div>
                                 <span class="projects__subtitle">RS232 Scale</span>
                                 <h3 class="projects__title">Weight Scale</h3>
-                                <a href="assets/pdf/Brochure-WeightScaleDev01" class="projects__button button button__small">
+                                <a href="https://github.com/watthanai/watthanai.github.io/blob/main/assets/pdf/Brochure-WeightScaleDev01.pdf" class="projects__button button button__small">
                                     <i class="ri-link"></i>
                                 </a>
                             </div>
