commit pdf weight

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                             <div>
                                 <span class="projects__subtitle">RS232 Scale</span>
                                 <h3 class="projects__title">Weight Scale</h3>
-                                <a href="assets/pdf/CV_Watthanai - L.pdf" class="projects__button button button__small">
+                                <a href="assets/pdf/Brochure-WeightScaleDev01.pdf" class="projects__button button button__small">
                                     <i class="ri-link"></i>
                                 </a>
                             </div>
