--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <i class="ri-instagram-line"></i>
                     </a>
 
-                    <a href="https://github.com/" target="_blank" class="profile__social-link">
+                    <a href="https://github.com/watthanai" target="_blank" class="profile__social-link">
                         <i class="ri-github-line"></i>
                     </a>
                 </ul>
